# commit-markets

./: .gitignore  Cargo.toml  README.md
cli/: index.mjs  package.json
docs/: BADGES.md  PRODUCT.md
legacy/: README.md  aggregate.py  harvest.sh
mac/: .gitignore  Info.plist  Package.swift  README.md  build-app.sh
mac/Sources/CommitsSH/: API.swift  AppDelegate.swift  Ccusage.swift  ConnectionManager.swift  MenuView.swift  main.swift
move/: Move.toml  README.md
move/sources/: oracle.move
move/tests/: oracle_tests.move
src/: main.rs
tools/: cm-agent.mjs  cm-anchor.mjs  cm-oracle.mjs
web/: .gitignore  package-lock.json  package.json  vercel.json
web/public/: llms.txt
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/[...slug]/: page.tsx
web/src/app/badges/: page.tsx
web/src/app/claim/: claim-form.tsx  page.tsx
web/src/app/connect/: connect-approve.tsx  page.tsx
web/src/app/grind/: page.tsx
web/src/app/leaderboard/: page.tsx
web/src/components/: ActivityHeatmap.tsx  BadgeHandleForm.tsx  BadgePreview.tsx  CandleChart.tsx  ChartSection.tsx  CopyButton.tsx  Fundamentals.tsx  HatchSeparator.tsx  LiveBoard.tsx  PriceChart.tsx  RangeBar.tsx  SearchBox.tsx  ShareButton.tsx  TickerCard.tsx  TickerChart.tsx  UsageSection.tsx  WaitlistForm.tsx  panel.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
web/src/lib/: antibot.ts  api.ts  board.ts  claims.ts  events.ts  fonts.ts  github.ts  live.ts  modelPricing.ts  momentumStore.ts  oracle.ts  oracleStore.ts  pairing.ts  rank.ts  resolution.ts  tracked.ts  usageStore.ts
(+51 files in other folders)
