[package]
name = "cmkt"
version = "0.1.0"
edition = "2021"
description = "commit-markets engine: turn GitHub commit history into a tradeable activity index"

[[bin]]
name = "cmkt"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
